[package]
name = "actix-delay"
version = "0.1.0"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
description = "Simulates a delayed response for actix-web"
homepage = "https://github.com/kuy/actix-delay"
documentation = "https://docs.rs/actix-delay"
repository = "https://github.com/kuy/actix-delay"
readme = "README.md"
keywords = ["actix", "actix-web", "middleware", "extractor", "testing"]
categories = ["web-programming::http-server", "web-programming"]
license = "MIT"
edition = "2018"

[dependencies]
actix-web = "2.0.0"
futures = "0.3.4"
futures-timer = "3.0.1"

[dev-dependencies]
actix-rt = "1.0.0"

[[example]]
name = "simple"
